# batching

./: README.md  env.development  package-lock.json  package.json  tsconfig.json
contract/: Cargo.toml  lib.rs
src/: batchTx.ts  dapp.ts  deployer.ts  helpers.ts  index.ts  txs.ts  useWeight.ts
